added dbcontext class and user_credentials class

--- a/ConsumptionManagerBackend/appsettings.json
+++ b/ConsumptionManagerBackend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=185.243.55.237;Port=3306;Database=energy_saver;Uid=vps_tjglyy;Pwd=Licencjat1!;"
+  }
 }
